# event_dispatcher

./: CMakeLists.txt  readme.md  readme.txt
include/event_dispatcher/: dispatcher_component_interface.h  event_dispatcher.h  event_type_list.h  multi_thread_model.h  single_thread_model.h
src/: CMakeLists.txt
test/: CMakeLists.txt  main.cpp
test/ComponentA/: componentA.h
test/ComponentB/: componentB.h
test/ComponentC/: componentC.h
test/app/: app.cpp  app.h  app_impl.cpp  app_impl.h  event_type_list.h
